// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when building descriptor with invalid trailing text should have extraneous input error 1`] = `
Array [
  "extraneous input 'TrailingText' expecting {'Abstract Entity', 'Association', 'End Namespace', 'Choice', 'Common', 'Descriptor', 'Domain', 'Domain Entity', 'Enumeration', 'Interchange', 'Inline Common', 'Shared Decimal', 'Shared Integer', 'Shared Short', 'Shared String', 'Subdomain'}, column: 0, line: 5, token: TrailingText",
]
`;

exports[`when building descriptor with lowercase descriptor name should have extraneous input error 1`] = `
Array [
  "extraneous input 'entity' expecting ID, column: 13, line: 2, token: entity",
]
`;

exports[`when building descriptor with missing descriptor name should have extraneous input error 1`] = `
Array [
  "missing ID at '[1]', column: 14, line: 2, token: [1]",
]
`;

exports[`when building descriptor with missing documentation in map type should have mismatched input error 1`] = `
Array [
  "mismatched input 'item' expecting 'documentation', column: 6, line: 6, token: item",
]
`;

exports[`when building descriptor with missing documentation should have mismatched input error 1`] = `
Array [
  "mismatched input 'End Namespace' expecting 'documentation', column: 0, line: 3, token: End Namespace",
]
`;

exports[`when building descriptor with missing enumeration item in map type should have mismatched input error 1`] = `
Array [
  "mismatched input 'End Namespace' expecting 'item', column: 0, line: 8, token: End Namespace",
]
`;
